--- a/package.json
+++ b/package.json
@@ -3,31 +3,41 @@
   "version": "0.0.1",
   "description": "Quasar/Webpack 3.11.1 > 3.11.2 build error Electron",
   "productName": "Quasar App",
-  "author": "J76F <github@jfaber.nl>",
+  "author": "J76F",
   "private": true,
+  "repository": "github:J76F/quasar-webpack-electron-test",
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
-    "build": "quasar build"
+    "serve": "quasar dev",
+    "build": "quasar build",
+    "electron:serve": "quasar dev -m electron",
+    "electron:build": "quasar build -m electron -P never",
+    "electron:build-debug": "quasar build -m electron -d -P never",
+    "electron:release": "quasar build -m electron -P always"
   },
   "dependencies": {
-    "@quasar/extras": "^1.16.4",
-    "core-js": "^3.6.5",
-    "quasar": "^2.6.0",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "@quasar/extras": "^1.16.7",
+    "core-js": "^3.33.0",
+    "electron-store": "^8.1.0",
+    "electron-updater": "^6.1.4",
+    "quasar": "^2.12.7",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.13.14",
-    "eslint": "^8.10.0",
-    "eslint-plugin-vue": "^9.0.0",
-    "eslint-webpack-plugin": "^3.1.1",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "@quasar/app-webpack": "^3.0.0"
+    "@babel/eslint-parser": "^7.22.15",
+    "@quasar/app-webpack": "3.11.1",
+    "electron": "^26.2.4",
+    "electron-builder": "^24.6.4",
+    "eslint": "^8.50.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.17.0",
+    "eslint-webpack-plugin": "^4.0.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
