--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.15",
-    "@quasar/app-webpack": "3.11.1",
+    "@quasar/app-webpack": "^3.11.2",
     "electron": "^26.2.4",
     "electron-builder": "^24.6.4",
     "eslint": "^8.50.0",
